# rednote-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
rednote_cli/: __main__.py  client_mixins.py  constants.py
rednote_cli/commands/: creator.py
tests/: test_anti_detection.py  test_cli.py  test_client.py  test_cookies.py  test_creator.py  test_creator_signing.py  test_formatter.py  test_integration.py  test_qr_login.py  test_signing.py  test_smoke.py
