[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rednote-cli"
version = "0.1.0"
description = "A CLI for RedNote (小红书海外版 / Xiaohongshu International) — search, read, interact, and post via reverse-engineered API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Loudsy", email = "loudsy.ai@gmail.com" }]
keywords = ["rednote", "xiaohongshu", "redbook", "cli", "api", "小红书", "海外版"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
    "browser-cookie3>=0.19",
    "pycryptodome>=3.20",
    "xhshow>=0.1.9",
    "PyYAML>=6.0",
    "qrcode>=7.0",
    "camoufox>=0.4.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.11.0", "mypy>=1.15.0"]

[project.urls]
Homepage = "https://github.com/loudsy-ai/rednote-cli"
Repository = "https://github.com/loudsy-ai/rednote-cli"
Issues = "https://github.com/loudsy-ai/rednote-cli/issues"

[project.scripts]
rednote = "rednote_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["rednote_cli"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-m 'not smoke'"
markers = ["smoke: real-API integration tests (run with: pytest -m smoke)"]
